--- a/examples/colorapp/colorapp-red.yaml
+++ b/examples/colorapp/colorapp-red.yaml
@@ -1,8 +1,15 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: red-app
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deployment-red
+  namespace: red-app
 spec:
   selector:
     matchLabels:
@@ -15,17 +22,19 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: hodong42/flask
+        image: robokingmaster/examples:colorapp
         ports:
         - containerPort: 8080
         env:
         - name: "APP_COLOR"
           value: "red"
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: service-red
+  namespace: red-app
 spec:
   selector:
     app: red
@@ -34,20 +43,20 @@ spec:
     port: 80
     targetPort: 8080
   type: NodePort
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-red
+  namespace: red-app
   annotations:
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
-  ingressClassName: alb
   rules:
     - http:
         paths:
-        - path: /
+        - path: /red
           pathType: Prefix
           backend:
             service:
