--- a/examples/ingress/traefik-ingress.yaml
+++ b/examples/ingress/traefik-ingress.yaml
@@ -1,4 +1,4 @@
-# Simple Ingress Using Kubernetes
+# Simple Ingress Using kubernetesCRD Provider
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -22,6 +22,6 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: pega-web
+              name: service-name
               port:
                 number: 80
