--- a/playbooks/create-tls-secret.yaml
+++ b/playbooks/create-tls-secret.yaml
@@ -16,7 +16,7 @@
           apiVersion: v1
           kind: Secret
           metadata:
-            name: "eisdev-tls"
+            name: "tls-certificate"
             namespace: "{{ namespace }}"
           type: kubernetes.io/tls
           data:
