Added gke gateway

--- a/examples/ingress/eks-alb-ingress.yaml
+++ b/examples/ingress/eks-alb-ingress.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: <hostname>
+    - host: <fqdn_hostname>
       http:
         paths:
         - path: /
