Added terraform for EKS cluster creation

--- a/examples/complete/eks-alb-colorapp-ssl.yaml
+++ b/examples/complete/eks-alb-colorapp-ssl.yaml
@@ -60,7 +60,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: redapp.abc.com
+    - host: redapp.example.com
       http:
         paths:
         - path: /
